chore(null-safety): annotate enum list endpoints