@@ -4,9 +4,9 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
 import com.aluon.core.user.model.Role;
+import org.eclipse.jdt.annotation.NonNull;
 
 
 @RestController
@@ -14,7 +14,7 @@ import com.aluon.core.user.model.Role;
 public class RoleController {
 
     @GetMapping
-    public List<Role> getRoles() {
-        return Arrays.asList(Role.values());
+    public List<@NonNull Role> getRoles() {
+        return List.of(Role.values());
     }
 }
